--- a/nginxctl/_config/server.conf
+++ b/nginxctl/_config/server.conf
@@ -1,8 +1,7 @@
 server {
-    server_name  localhost;
-    listen       8080;
-
+    server_name localhost;
+    listen 8080;
     location / {
-        root   '/tmp/wwwroot';
+        root /tmp/wwwroot;
     }
 }
