--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,4 +30,5 @@ jobs:
         flake8 . --max-complexity=10 --max-line-length=127 --ignore=E731
     - name: Test with unittest
       run: |
-        python -m unittest discover -s nginxctl.tests
+          python -m pip install .
+          cd .. && python -m unittest discover -s nginxctl.tests
