--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.5, 3.6, 3.7, 3.8]
+          python-version: [ 2.7, 3.5, 3.6, 3.7, 3.8, 3.9 ]
 
     steps:
     - uses: actions/checkout@v2
@@ -27,8 +27,7 @@ jobs:
     - name: Lint with flake8
       run: |
         pip install flake8
-        flake8 . --max-complexity=10 --max-line-length=127 --ignore=E731
+          flake8 . --count --select=$(printf '%s,' {A..Z}) --ignore='W503,E203' --show-source --max-complexity=13 --max-line-length=119 --statistics
     - name: Test with unittest
       run: |
-          python -m pip install .
-          cd .. && python -m unittest discover -s nginxctl.tests
+          python setup.py test
