--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -12,22 +12,22 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-          python-version: [ 2.7, 3.5, 3.6, 3.7, 3.8, 3.9 ]
+          python-version: [ 2.7, 3.5, 3.6, 3.7, 3.8, 3.9, '3.10', 3.11, 3.12, 3.13 ]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        pip install -r requirements.txt
+        python -m pip install -r requirements.txt
     - name: Lint with flake8
       run: |
-        pip install flake8
-          flake8 . --count --select=$(printf '%s,' {A..Z}) --ignore='W503,E203' --show-source --max-complexity=13 --max-line-length=119 --statistics
+        python -m pip install flake8
+        flake8 . --count --select=$(printf '%s,' {A..Z}) --ignore='W503,E203' --show-source --max-complexity=13 --max-line-length=119 --statistics
     - name: Test with unittest
       run: |
-          python setup.py test
+        python setup.py test
