--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -7,13 +7,31 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build_27:
 
     runs-on: ubuntu-latest
     container: coatldev/six:latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Install dependencies
+      run: |
+        python --version
+        pip install --upgrade pip setuptools wheel
+        pip install -r requirements.txt
+    - name: Lint with flake8
+      run: |
+        pip install flake8
+        flake8 . --count --select=$(printf '%s,' {A..Z}) --ignore='W503,E203' --show-source --max-complexity=13 --max-line-length=119 --statistics
+    - name: Test with unittest
+      run: python setup.py test
+
+  build:
+
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-          python-version: [ 2.7, 3.5, 3.6, 3.7, 3.8, 3.9, '3.10', 3.11, 3.12, 3.13 ]
+          python-version: [ 3.7, 3.8, 3.9, '3.10', 3.11, 3.12, 3.13 ]
 
     steps:
     - uses: actions/checkout@v4
