--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -7,7 +7,8 @@ on:
     branches: [ master ]
 
 jobs:
-  build_27:
+  build_2_7:
+    name: build (2.7)
 
     runs-on: ubuntu-latest
     container: coatldev/six:latest
@@ -24,14 +25,14 @@ jobs:
         pip install flake8
         flake8 . --count --select=$(printf '%s,' {A..Z}) --ignore='W503,E203' --show-source --max-complexity=13 --max-line-length=119 --statistics
     - name: Test with unittest
-      run: python setup.py test
+      run: python -m unittest discover -s nginxctl/tests
 
   build:
 
     runs-on: ubuntu-latest
     strategy:
       matrix:
-          python-version: [ 3.7, 3.8, 3.9, '3.10', 3.11, 3.12, 3.13 ]
+          python-version: [ 3.8, 3.9, '3.10', 3.11, 3.12, 3.13 ]
 
     steps:
     - uses: actions/checkout@v4
