--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 crossplane
 boltons
-pyyaml!=6.0.0,!=5.4.0,!=5.4.1
+enum34; python_version <= '2.7'
+whichcraft; python_version <= '2.7'
 meta
+pyyaml!=6.0.0,!=5.4.0,!=5.4.1
